增加spring cloud 导读，更改目录

--- a/source/_posts/简单工厂模式.md
+++ b/source/_posts/简单工厂模式.md
@@ -8,9 +8,11 @@ category: 设计模式
 
 # 简单工厂模式
 
-先复习一下面向对象的七大设计原则，有一些还是不太了解。
+先复习一下面向对象的七大设计原则。
 
 ## 面向对象设计七大原则
+
+<!--more-->
 1. 单一职责原则
    - 一个类应该专注于一件事
    - 降低类的复杂性，逻辑简单，提高可读性可维护性，变更影响的风险降低。
@@ -22,7 +24,7 @@ category: 设计模式
 3. 依赖倒置原则
    - 尽量依赖抽象，不依赖具体实现
    - 具体依赖抽象，上层依赖下层，假设B是较A低的模块，但B需要使用到A的功能，这个时候，B不应当直接使用A中的具体类；而应当由B定义一抽象接口，并由A来实现这个抽象接口，B只使用这个抽象接口；这样就达到了依赖倒置的目的，B也解除了对A的依赖，反过来是A依赖于B定义的抽象接口。
-<!--more-->
+
 4. 接口隔离原则
    - 应该为客户端提供较小的单独的接口，而不是提供大的总的接口
    - 建立单一接口，不要建立庞大的接口，尽量细化接口，接口中的方法尽量少。
