--- a/source/_posts/责任链模式.md
+++ b/source/_posts/责任链模式.md
@@ -5,7 +5,6 @@ tags: 设计模式
 category: 设计模式
 ---
 
-# 责任链模式
 
 ## 定义：
 是多个对象都有机会处理请求，从而避免了发送者和接收者之间的耦合关系，键这些对象连接成一条链，并沿着这条链传递该请求，直到有一个对象处理它。
@@ -19,7 +18,7 @@ Client：客户
 ## 例子
 
 以大话设计模式中的例子来举例：   
-需求：一个员工想要请求一些列的事情，但是处理请求的对象不一致，比如想要请假三天只需要经理批准即可，而如果需要请一个月假那么需要总监批准，如果需要涨薪需要总经理批准。
+需求：一个员工想要请求一系列的事情，但是处理请求的对象不一致，比如想要请假三天只需要经理批准即可，而如果需要请一个月假那么需要总监批准，如果需要涨薪需要总经理批准。
 
 如果设计一个方法，在方法中进行大量的if else 判断显然不好，职责过大，不符合开闭原则。
 
@@ -95,11 +94,12 @@ public class Client {
         //组装责任链
         jinli.setNext(zongjian);
         zongjian.setNext(zongjinli);
-
+        //设置请求
         Request request=new Request("请小假","xxx请3天假");
-        jinli.handler(request);
         request.setType("涨薪");
         request.setContext("xxx申请涨薪1000");
+        jinli.handler(request);
+        //将请求放入链头
         jinli.handler(request);
     }
 }
