--- a/source/_posts/对分布式链路追踪技术的理解.md
+++ b/source/_posts/对分布式链路追踪技术的理解.md
@@ -21,11 +21,13 @@ category: 分布式
 - 可扩展性：服务架构变化迅速，集群扩容，因此必须要有良好的可扩展性
 - 及时与准确性：对于监控的服务的数据应该及时拿到，并且分析；如果服务出了问题应该可以及时定位
 
+不仅仅是大型的分布式系统需要这种追踪，如果是单机复杂的系统，调用链路负载，依旧需要进行链路监控。
+
 ## 分布式跟踪
 
 分布式的追踪系统需要记录在一次请求后系统完成的所有工作的信息。例如：下面有5台服务器，一个前端服务器A，连个中间层B，C，连个后端D,E。当用户对A调用的时候，A会RPC调用B，C；B会立刻返回，C还会继续RPC调用D，E，最后将信息返回给C，C返回给A，此时一个完整的链路才调用结束。对于这样一个链路，分布式追踪系统需要记录每台机器上每次发送和接收的信息标识符，时间戳，机器，服务的标识。
 
-![调用示例](对分布式链路追踪技术的理解\dapper-1_tree.png)
+![调用示例](对分布式链路追踪技术的理解/dapper-1_tree.png)
 
 ### 术语
 
@@ -43,17 +45,16 @@ category: 分布式
 ### 性能
 
 - 当一个线程被跟踪时，可以将trace contex 存在ThreadLocal 中，而 trace context应该是小并且容易复制的，里面存储span id和trace id以及span属性。
-- 监控者最好是独立于语言
+- 监控者最好是独立于语言，一些开源监控工具往往提供多个语言的抓取者，而处理数据与展示确相同
 
 ### 采样
 对于分布式系统中的所有链路不必要全部收集，实际上只需要收集其中一小部分就足够了。这样可以降低损耗。
 
 可以设置采样率，比如0.01，全局的设置采样率，或者对于根据权重设置采样率。更好的如果可以自适应的设置采样率，比如经常发生问题的地方采样率自动调整高一些。
 
-
 ### 数据收集
 
-首先，可以将数据存储在本地日志文件中，然后由一个追踪的守护进程将日志pull给追踪的服务器。也可以是守护进程暴露这些日志给追踪服务器，由追踪服务器自己来抓取。
+首先，可以将数据存储在本地日志文件中，然后由一个追踪的守护进程将日志push给追踪的服务器。也可以是守护进程暴露这些日志给追踪服务器，由追踪服务器自己来抓取。
 
 ### 安全与隐私
 
@@ -64,6 +65,8 @@ category: 分布式
 
 ### trace生成的损耗
 由于span id和trace id都是全局唯一的，这是瓶颈。如果一个span被采样，那么为它分配span id就会很慢；如果仅仅是annotation，那么只关心自己，花费时间很少。
+
+全局唯一id的生成策略通常有依赖数据库自增主键，雪花算法，uuid等方式。
 
 ### 数据展示与查询
 
