--- a/source/_posts/排序算法.md
+++ b/source/_posts/排序算法.md
@@ -6,7 +6,6 @@ tags:
 - 排序
 category: 算法
 ---
-# 几种排序算法
 
 介绍几种常用的排序算法：选择，冒泡，插入，归并，快排，堆排，希尔，计数
 
@@ -27,10 +26,10 @@ public static int[] bubble(int[] nums){
             return nums;
         }
 
-        for (int i = 0; i <nums.length ; i++) {
+        for (int i = 0; i <nums.length-1 ; i++) {
             //优化操作，如果不在交换，证明已经排好了序
             boolean isSwap=false;
-            for (int j = 0; j <nums.length-1 ; j++) {
+            for (int j = 0; j <nums.length-i-1 ; j++) {
                 if(nums[j]>nums[j+1]){
                     swap(nums,j,j+1);
                     isSwap=true;
