--- a/source/_posts/单例模式.md
+++ b/source/_posts/单例模式.md
@@ -5,8 +5,6 @@ tags: 设计模式
 category: 设计模式
 ---
 
-# 单例模式
-
 单例模式(Singleton Pattern)：单例模式确保某一个类只有一个实例，而且自行实例化并向整个系统提供这个实例，这个类称为单例类，它提供全局访问的方法。属于创建型模式。  
 
 ## 结构
@@ -18,7 +16,7 @@ Singleton:单例类
 一般分三步：声明一个私有的静态变量instance；私有化构造方法；提供一个共有的接口用于获取这个对象。
 <!--more-->
 ### 饿汉式（静态常量，线程安全）
-懒汉式也就是没有实现延迟加载。
+饿汉式也就是没有实现延迟加载。
 
 单例模式的一种实现，使用静态常量，在类加载的过程中就已经初始化了INSTANCE这个常量，而类加载只需一次，而且由虚拟机保证线程安全，不过可能浪费系统资源。
 
