--- a/source/_posts/类图与类之间的关系.md
+++ b/source/_posts/类图与类之间的关系.md
@@ -15,14 +15,14 @@ category: 设计模式
 <!--more-->
 在UML类图中，类一般由三部分组成：  
 
-(1) 第一部分是类名：每个类都必须有一个名字，类名是一个字符串。  
+(1) 第一部分是**类名**：每个类都必须有一个名字，类名是一个字符串。  
 
-(2) 第二部分是类的属性(Attributes)：属性是指类的性质，即类的成员变量。一个类可以有任意多个属性，也可以没有属性
+(2) 第二部分是类的**属性**(Attributes)：属性是指类的性质，即类的成员变量。一个类可以有任意多个属性，也可以没有属性
 
 UML规定属性的表示方式为：
-
+```
 可见性 名称:类型 [ = 缺省值 ]
-
+```
 其中：
 
 - “可见性”表示该属性对于类外的元素而言是否可见，包括公有(public)、私有(private)和受保护(protected)三种，在类图中分别用符号+、-和#表示。
@@ -31,12 +31,12 @@ UML规定属性的表示方式为：
 - “缺省值”是一个可选项，即属性的初始值。
 
 
-(3) 第三部分是类的操作(Operations)：操作是类的任意一个实例对象都可以使用的行为，是类的成员方法。
+(3) 第三部分是类的**操作**(Operations)：操作是类的任意一个实例对象都可以使用的行为，是类的成员方法。
 
 UML规定操作的表示方式为：
-
+```
 可见性 名称(参数列表) [ : 返回类型]
-
+```
 其中：
 
 - “可见性”的定义与属性的可见性定义相同。
@@ -44,6 +44,7 @@ UML规定操作的表示方式为：
 - “参数列表”表示方法的参数，其语法与属性的定义相似，参数个数是任意的，多个参数之间用逗号“，”隔开。
 - “返回类型”是一个可选项，表示方法的返回值类型，依赖于具体的编程语言，可以是基本数据类型，也可以是用户自定义类型，还可以是空类型(void)，如果是构造方法，则无返回类型。
 
+例如：   
 ![](/类图与类之间的关系/类图.jpg)
 
 ## 类之间的关系
@@ -79,7 +80,7 @@ class Node{
 
 ~~~
 #### 聚合
-聚合表示整体与部分的关系,成员对象可以脱离对象单独存在  
+聚合表示整体与部分的关系,**成员对象可以脱离对象单独存在**，生命周期由其自己控制  
 
 聚合关系用**带空心菱形的直线**表示。 
 
@@ -98,6 +99,7 @@ class Engine{
 }
 ~~~
 
+聚合：  
 ![聚合](/类图与类之间的关系/uml聚合.png)
 
 
@@ -150,6 +152,7 @@ class Car{
 }
 ~~~
 
+依赖：  
 ![依赖](/类图与类之间的关系/uml依赖.png)
 
 ### 泛化关系
@@ -165,12 +168,14 @@ class People{
 class Student extend People{
 
 }
-~~~
+~~~  
 
+泛化：  
 ![泛化](/类图与类之间的关系/uml泛化.png)
 
 ### 接口与实现关系
 
 在UML中，类与接口之间的实现关系用**带空心三角形的虚线**来表示。三角形指向了接口。
 
+实现：   
 ![实现](/类图与类之间的关系/uml实现.png)
