--- a/source/_posts/排序算法.md
+++ b/source/_posts/排序算法.md
@@ -8,8 +8,16 @@ category: 算法
 ---
 
 介绍几种常用的排序算法：选择，冒泡，插入，归并，快排，堆排，希尔，计数
-
 <!--more-->
+- [冒泡](#%e5%86%92%e6%b3%a1)
+- [选择排序](#%e9%80%89%e6%8b%a9%e6%8e%92%e5%ba%8f)
+- [插入排序](#%e6%8f%92%e5%85%a5%e6%8e%92%e5%ba%8f)
+- [希尔排序](#%e5%b8%8c%e5%b0%94%e6%8e%92%e5%ba%8f)
+- [归并排序](#%e5%bd%92%e5%b9%b6%e6%8e%92%e5%ba%8f)
+- [堆排序](#%e5%a0%86%e6%8e%92%e5%ba%8f)
+- [计数排序](#%e8%ae%a1%e6%95%b0%e6%8e%92%e5%ba%8f)
+- [bogoSort](#bogosort)
+
 
 各种排序的时间复杂度  
 ![排序时间复杂度](排序算法/排序时间复杂度.png)
