--- a/source/_posts/对分布式链路追踪技术的理解.md
+++ b/source/_posts/对分布式链路追踪技术的理解.md
@@ -9,12 +9,21 @@ category: 分布式
 现代互联网服务通常是复杂的大规模分布式系统，持续跟踪与监控每个服务显然是必须的。
 
 <!--more-->
-
+- [背景](#%e8%83%8c%e6%99%af)
+- [分布式跟踪](#%e5%88%86%e5%b8%83%e5%bc%8f%e8%b7%9f%e8%b8%aa)
+  - [术语](#%e6%9c%af%e8%af%ad)
+  - [性能](#%e6%80%a7%e8%83%bd)
+  - [采样](#%e9%87%87%e6%a0%b7)
+  - [数据收集](#%e6%95%b0%e6%8d%ae%e6%94%b6%e9%9b%86)
+  - [安全与隐私](#%e5%ae%89%e5%85%a8%e4%b8%8e%e9%9a%90%e7%a7%81)
+  - [trace生成的损耗](#trace%e7%94%9f%e6%88%90%e7%9a%84%e6%8d%9f%e8%80%97)
+  - [数据展示与查询](#%e6%95%b0%e6%8d%ae%e5%b1%95%e7%a4%ba%e4%b8%8e%e6%9f%a5%e8%af%a2)
+  - [服务告警](#%e6%9c%8d%e5%8a%a1%e5%91%8a%e8%ad%a6)
 ## 背景
 
 比如一个web搜索，前端服务器经一个web查询分发给上百台搜索服务器，每个服务器在自己的inedx上搜索，例如搜索新闻，图片，视频，音乐，博客等，还需要配合例如广告处理，拼写检查等服务，最后将这些搜索的结果返回给前端服务器，对于web搜索，用户对于时间延时很敏感，因此任何一个子系统出了问题，就可能导致延时产生。而工程师总体对于这种情况是很难分析的，因为涉及到了多个服务，多个机器。工程师无法准确地知道调用了哪些服务，也不能对于每一个服务都了如指掌，而服务和服务器可能被多个不同的客户端调用。
 
-因此急需要一种分布式的追踪监控工具，并且需要大规模部署，持续监控。并且还需要有一下目标：
+因此急需要一种分布式的追踪监控工具，并且需要大规模部署，持续监控。并且还需要有以下目标：
 
 - 低消耗：跟踪系统对于原有的服务的性能影响应该做到微乎其微
 - 应用级透明：服务开发人员应该不能感知到跟踪系统，不能有代码侵入性，否则因为跟踪系统的bug而导致服务不可用是完全不可取的
@@ -83,7 +92,6 @@ category: 分布式
 当出现问题时，比如服务调用失败、服务经常超时，应该发出告警。
 
 
-参考：
-
+## 参考
 [https://ai.google/research/pubs/pub36356](https://ai.google/research/pubs/pub36356)   
-[http://alphawang.com/blog/google-dapper-translation/](http://alphawang.com/blog/google-dapper-translation/)    
+[http://alphawang.com/blog/google-dapper-translation/](http://alphawang.com/blog/google-dapper-translation/)      
