--- a/source/_posts/排序算法.md
+++ b/source/_posts/排序算法.md
@@ -15,6 +15,7 @@ category: 算法
 - [希尔排序](#%e5%b8%8c%e5%b0%94%e6%8e%92%e5%ba%8f)
 - [归并排序](#%e5%bd%92%e5%b9%b6%e6%8e%92%e5%ba%8f)
 - [堆排序](#%e5%a0%86%e6%8e%92%e5%ba%8f)
+- [快排](#%e5%bf%ab%e6%8e%92)
 - [计数排序](#%e8%ae%a1%e6%95%b0%e6%8e%92%e5%ba%8f)
 - [bogoSort](#bogosort)
 
@@ -25,7 +26,7 @@ category: 算法
 ## 冒泡
 冒泡：时间复杂度最优O(n),平均&最坏O(N^2)；稳定的排序算法   
 
-通过每次遍历一次序列，两两交换，正确性显而易见：一个数至多交换n次，适用于短序列排序
+通过每次遍历一次序列，两两交换，正确性显而易见：每一次遍历都会有一个数放在它该在的位置，一个数至多交换n次，适用于短序列排序
 
 代码：
 ~~~java
@@ -76,10 +77,10 @@ public static int[] bubble(int[] nums){
 ~~~
 
 ## 插入排序
-最佳情况：T(n) = O(n),最坏&平均：T(n) = O(n2)
+最佳情况：T(n) = O(n),最坏&平均：T(n) = O(n^2)
 
 保证前i个数有序，适用于短序列排序
-~[insertSort](排序算法/insert.gif)
+![insertSort](排序算法/insert.gif)
 ~~~java
     public static int[] insertSort(int[] nums){
         if (nums.length<2){
@@ -134,23 +135,21 @@ public static int[] bubble(int[] nums){
 
 最优&最坏&平均时间复杂度O(NlogN)
 
-分治思想
+分治思想   
 ![mergeSort](排序算法/merge.gif)
 ~~~java
     public static int[] mergeSort(int[] nums){
         if(nums.length<2){
             return nums;
         }
+
         int mid=nums.length/2;
         int[] left=Arrays.copyOfRange(nums,0,mid);
         int[] right=Arrays.copyOfRange(nums,mid,nums.length);
-
-
         return merge(mergeSort(left),mergeSort(right));
     }
 
     private static int[] merge(int[] left, int[] right) {
-
         int[] res=new int[left.length+right.length];
         int i=0,j=0,k=0;
         while (i<left.length&&j<right.length){
@@ -159,9 +158,7 @@ public static int[] bubble(int[] nums){
             }else {
                 res[k++]=right[j++];
             }
-
         }
-
         while (i<left.length){
             res[k++]=left[i++];
         }
@@ -223,7 +220,9 @@ public static int[] bubble(int[] nums){
     }
 ~~~
 
-快排，最佳&平均：T(n) = O(nlogn)，最差：T(n) = O(n2)
+## 快排
+
+最佳&平均：T(n) = O(nlogn)，最差：T(n) = O(n^2)
 
 快排主要使用了分治的思想，每一次都将原问题缩小为1/2
 
@@ -238,13 +237,10 @@ public static int[] bubble(int[] nums){
         int index=partition(nums,start,end);
         quickSort(nums,start,index);
         quickSort(nums,index+1,end);
-
     }
 
     private static int partition(int[] nums, int start, int end) {
-
         int pivote=nums[start],i=start,j=end-1;
-
         while (i<j){
             while (i<j&&nums[j]>pivote){
                 j--;
@@ -262,7 +258,6 @@ public static int[] bubble(int[] nums){
         }
         nums[i]=pivote;
         return i;
-
     }
 ~~~
 
@@ -320,7 +315,7 @@ private static void bogoSort(int[] nums){
     }
 ~~~
 
-除了这些算法，还有很多有趣的算法，比如timSort（以后详细介绍）：java，python等内置排序算法，稳定高效；  
+除了这些算法，还有很多有趣的算法，比如timSort：java，python等内置排序算法，稳定高效；  
 双基准快排：java内置排序算法   
 桶排序，鸡尾酒排序，煎饼排序...
 
