--- a/source/_posts/类图与类之间的关系.md
+++ b/source/_posts/类图与类之间的关系.md
@@ -4,48 +4,44 @@ date: 2019-04-03 15:20:34
 tags: 
 - 设计模式
 - UML
-
 category: 设计模式
 ---
 
 ## 类图
 参考了[http://www.uml.org.cn/oobject/201211231.asp](http://www.uml.org.cn/oobject/201211231.asp)，讲的很好
 
-类(Class)封装了数据和行为，是面向对象的重要组成部分，它是具有相同属性、操作、关系的对象集合的总称。在系统中，每个类都具有一定的职责，职责指的是类要完成什么样的功能，要承担什么样的义务。一个类可以有多种职责，设计得好的类一般只有一种职责。在定义类的时候，将类的职责分解成为类的属性和操作（即方法）。类的属性即类的数据职责，类的操作即类的行为职责。设计类是面向对象设计中最重要的组成部分，也是最复杂和最耗时的部分。
+类(Class)封装了**数据**和**行为**，是面向对象的重要组成部分，它是具有相同属性、操作、关系的对象集合的总称。在系统中，每个类都具有一定的职责，职责指的是类要完成什么样的功能，要承担什么样的义务。一个类可以有多种职责，设计得好的类一般只有一种职责。在定义类的时候，将类的职责分解成为类的属性和操作（即方法）。类的属性即类的数据职责，类的操作即类的行为职责。设计类是面向对象设计中最重要的组成部分，也是最复杂和最耗时的部分。
 <!--more-->
 在UML类图中，类一般由三部分组成：  
-
-(1) 第一部分是**类名**：每个类都必须有一个名字，类名是一个字符串。  
-
-(2) 第二部分是类的**属性**(Attributes)：属性是指类的性质，即类的成员变量。一个类可以有任意多个属性，也可以没有属性
+1. 第一部分是**类名**：每个类都必须有一个名字，类名是一个字符串。  
+2. 第二部分是类的**属性**(Attributes)：属性是指类的性质，即类的成员变量。一个类可以有任意多个属性，也可以没有属性
 
 UML规定属性的表示方式为：
 ```
 可见性 名称:类型 [ = 缺省值 ]
 ```
-其中：
 
+其中：
 - “可见性”表示该属性对于类外的元素而言是否可见，包括公有(public)、私有(private)和受保护(protected)三种，在类图中分别用符号+、-和#表示。
 - “名称”表示属性名，用一个字符串表示。
 - “类型”表示属性的数据类型，可以是基本数据类型，也可以是用户自定义类型。
 - “缺省值”是一个可选项，即属性的初始值。
 
-
-(3) 第三部分是类的**操作**(Operations)：操作是类的任意一个实例对象都可以使用的行为，是类的成员方法。
+3. 第三部分是类的**操作**(Operations)：操作是类的任意一个实例对象都可以使用的行为，是类的成员方法。
 
 UML规定操作的表示方式为：
 ```
 可见性 名称(参数列表) [ : 返回类型]
 ```
-其中：
 
+其中：
 - “可见性”的定义与属性的可见性定义相同。
 - “名称”即方法名，用一个字符串表示。
 - “参数列表”表示方法的参数，其语法与属性的定义相似，参数个数是任意的，多个参数之间用逗号“，”隔开。
 - “返回类型”是一个可选项，表示方法的返回值类型，依赖于具体的编程语言，可以是基本数据类型，也可以是用户自定义类型，还可以是空类型(void)，如果是构造方法，则无返回类型。
 
 例如：   
-![](/类图与类之间的关系/类图.jpg)
+![](类图与类之间的关系/类图.jpg)
 
 ## 类之间的关系
 
@@ -58,28 +54,30 @@ UML规定操作的表示方式为：
 
 在关联中又包含几种关联方式
 
-#### 双向关联
+#### 分类一
+##### 双向关联
 
 **无箭头的实线**的关联
 
-#### 单向关联
+##### 单向关联
 
 使用**带箭头的实线**表示
 
 通常将一个类的对象作为另一个类的成员变量。
 
-![单向关联](/类图与类之间的关系/uml关联.png)
+![单向关联](类图与类之间的关系/uml关联.png)
 
-#### 自关联
+##### 自关联
 在系统中可能会存在一些类的属性对象类型为该类本身，这种特殊的关联关系称为自关联。例如:
 ~~~java
 class Node{
     int val;
     Node next;
 }
-
 ~~~
-#### 聚合
+
+#### 分类二
+##### 聚合
 聚合表示整体与部分的关系,**成员对象可以脱离对象单独存在**，生命周期由其自己控制  
 
 聚合关系用**带空心菱形的直线**表示。 
@@ -100,11 +98,10 @@ class Engine{
 ~~~
 
 聚合：  
-![聚合](/类图与类之间的关系/uml聚合.png)
+![聚合](类图与类之间的关系/uml聚合.png)
 
 
-
-#### 组合
+##### 组合
 组合表示整体与部分的关系，但是但是整体对象**可以控制成员的生存周期**  
 
 组合关系用**带实心菱形的直线**表示
@@ -124,19 +121,17 @@ class Mouth{
 }
 ~~~
 
-![组合](/类图与类之间的关系/uml组合.png)
-
-
+![组合](类图与类之间的关系/uml组合.png)
 
 
 实际上，聚合组合也不是绝对分开的，组合也是一种聚合。
 
 ### 依赖
-依赖是一种使用关系，特定事物的改变会改变使用该事物的事物，在需要使用某类时使用依赖
+依赖是一种**使用关系**，特定事物的改变会改变使用该事物的事物，在需要使用某类时使用依赖
 
 大多数情况下，依赖关系体现在某个类的方法使用另一个类的对象作为参数。在UML中，依赖关系用**带箭头的虚线**表示，由依赖的一方指向被依赖的一方。  
 
-依赖关系通常通过三种方式来实现，第一种也是最常用的一种方式是如图1所示的将一个类的对象作为另一个类中方法的参数，第二种方式是在一个类的方法中将另一个类的对象作为其局部变量，第三种方式是在一个类的方法中调用另一个类的静态方法。
+依赖关系通常通过三种方式来实现，第一种也是最常用的一种方式将一个类的对象作为另一个类中方法的参数，第二种方式是在一个类的方法中将另一个类的对象作为其局部变量，第三种方式是在一个类的方法中调用另一个类的静态方法。
 
 例如：
 ~~~java
@@ -153,10 +148,10 @@ class Car{
 ~~~
 
 依赖：  
-![依赖](/类图与类之间的关系/uml依赖.png)
+![依赖](类图与类之间的关系/uml依赖.png)
 
 ### 泛化关系
-泛化关系也就是继承关系，描述子类与父类的关系
+泛化关系也就是**继承**关系，描述子类与父类的关系
 
 泛化关系用**带空心三角形的直线**来表示。
 
@@ -171,11 +166,11 @@ class Student extend People{
 ~~~  
 
 泛化：  
-![泛化](/类图与类之间的关系/uml泛化.png)
+![泛化](类图与类之间的关系/uml泛化.png)
 
 ### 接口与实现关系
 
 在UML中，类与接口之间的实现关系用**带空心三角形的虚线**来表示。三角形指向了接口。
 
 实现：   
-![实现](/类图与类之间的关系/uml实现.png)
+![实现](类图与类之间的关系/uml实现.png)
