--- a/source/_posts/谈谈时间序列数据库.md
+++ b/source/_posts/谈谈时间序列数据库.md
@@ -127,18 +127,18 @@ influxdb是一款优秀的时序数据库。可以参考[http://hbasefly.com/201
 
 逻辑上已经设计完成。
 
-![](谈谈时间序列数据库/tsdb整体.png)
+![tsdb整体设计](谈谈时间序列数据库/tsdb整体.png)
 
 5. 在一个分组中会有不同的tagk，tagv，如何保证读写的效率呢，如何存储呢？应该采用类似lsm树的tsm树，内存加磁盘。先写内存，内存中的数据结构应该是`Map<key,List<Entry>`，因为metric确定，索引key应该是tagk+tagv+valueType,值应该是一个列表`Entry{time,value}`。为了防止崩溃丢失数据，应该采用WAL机制，先顺序写log，再写内存。当内存到达阈值的时候或者是log文件大小达到阈值就flush，将其刷到磁盘中产生一个文件。而且每个一段时间会进行将小文件合并。并且每隔一段时间删除过期的日志。   
 
-![](谈谈时间序列数据库/tsdb表.png)
+![tsdb表设计](谈谈时间序列数据库/tsdb表.png)
 
 数据在文件或内存中的逻辑格式：   
-![](谈谈时间序列数据库/tbds数据逻辑格式.png)
+![tsdb数据逻辑格式](谈谈时间序列数据库/tbds数据逻辑格式.png)
 
 在磁盘上又应该如何存储呢？首先，一定有索引，选取tagk+tagv为索引，然后将entry按顺序存储在一起，类似redis压缩列表。因此将索引存放在文件的首部，将data存放于后面。在首部应该还有一个[startTime,endTime]用于范围查询过滤。一个文件内部有多个tagk，tagv，那么是否需要进行布隆过滤器呢？不需要的原因，每个指标每时每刻都在产生数据，所以在这一定存在；需要的理由，防止空查。因此文件可以分为两个部分：首部和data部。如下图，other中放置布隆过滤器，时间片，metric名等元数据信息。至于索引的格式，一颗树就行。
 
-![](谈谈时间序列数据库/tsdb文件.png)
+![tsdb文件](谈谈时间序列数据库/tsdb文件.png)
 
 
 目前使用metric+tagk+tagv很方便查询，但是如果只有tagk和tagv那么不方便，所以需要一个倒排索引。倒排索引不应该放在每一个flush后产生文件里，这样没有作用，应该放在时间分区下一个单独的文件。
