--- a/source/_posts/对分布式链路追踪技术的理解.md
+++ b/source/_posts/对分布式链路追踪技术的理解.md
@@ -1,5 +1,5 @@
 ---
-title: 谈谈对分布式链路追踪与监控的理解
+title: 对分布式链路追踪与监控的理解
 date: 2019-07-13 21:40:20
 tags: 
 - 分布式
@@ -19,18 +19,19 @@ category: 分布式
   - [trace生成的损耗](#trace%e7%94%9f%e6%88%90%e7%9a%84%e6%8d%9f%e8%80%97)
   - [数据展示与查询](#%e6%95%b0%e6%8d%ae%e5%b1%95%e7%a4%ba%e4%b8%8e%e6%9f%a5%e8%af%a2)
   - [服务告警](#%e6%9c%8d%e5%8a%a1%e5%91%8a%e8%ad%a6)
+- [参考](#%e5%8f%82%e8%80%83)
 ## 背景
 
 比如一个web搜索，前端服务器经一个web查询分发给上百台搜索服务器，每个服务器在自己的inedx上搜索，例如搜索新闻，图片，视频，音乐，博客等，还需要配合例如广告处理，拼写检查等服务，最后将这些搜索的结果返回给前端服务器，对于web搜索，用户对于时间延时很敏感，因此任何一个子系统出了问题，就可能导致延时产生。而工程师总体对于这种情况是很难分析的，因为涉及到了多个服务，多个机器。工程师无法准确地知道调用了哪些服务，也不能对于每一个服务都了如指掌，而服务和服务器可能被多个不同的客户端调用。
 
-因此急需要一种分布式的追踪监控工具，并且需要大规模部署，持续监控。并且还需要有以下目标：
+因此急需要一种分布式的链路追踪监控工具，可以还原调用链路以及链路调用间的一些属性，并且需要大规模部署，持续监控。并且还需要有以下目标：
 
 - 低消耗：跟踪系统对于原有的服务的性能影响应该做到微乎其微
 - 应用级透明：服务开发人员应该不能感知到跟踪系统，不能有代码侵入性，否则因为跟踪系统的bug而导致服务不可用是完全不可取的
 - 可扩展性：服务架构变化迅速，集群扩容，因此必须要有良好的可扩展性
 - 及时与准确性：对于监控的服务的数据应该及时拿到，并且分析；如果服务出了问题应该可以及时定位
 
-不仅仅是大型的分布式系统需要这种追踪，如果是单机复杂的系统，调用链路负载，依旧需要进行链路监控。
+不仅仅是大型的分布式系统需要这种追踪，如果是单机复杂的系统，调用链路复杂，依旧需要进行链路监控。
 
 ## 分布式跟踪
 
@@ -52,18 +53,19 @@ category: 分布式
 
 
 ### 性能
+跟踪系统本身不能太影响服务的性能。
 
 - 当一个线程被跟踪时，可以将trace contex 存在ThreadLocal 中，而 trace context应该是小并且容易复制的，里面存储span id和trace id以及span属性。
-- 监控者最好是独立于语言，一些开源监控工具往往提供多个语言的抓取者，而处理数据与展示确相同
+- 监控者最好是独立于语言，一些开源监控工具往往提供多个语言的抓取者（Collector），而处理数据（Server）与展示（Dashboard）相同
 
 ### 采样
 对于分布式系统中的所有链路不必要全部收集，实际上只需要收集其中一小部分就足够了。这样可以降低损耗。
 
-可以设置采样率，比如0.01，全局的设置采样率，或者对于根据权重设置采样率。更好的如果可以自适应的设置采样率，比如经常发生问题的地方采样率自动调整高一些。
+可以设置采样率，比如0.01，全局的设置采样率；或者对于根据权重设置采样率；更好的如果可以自适应的设置采样率，比如经常发生问题的地方采样率自动调整高一些。
 
 ### 数据收集
 
-首先，可以将数据存储在本地日志文件中，然后由一个追踪的守护进程将日志push给追踪的服务器。也可以是守护进程暴露这些日志给追踪服务器，由追踪服务器自己来抓取。
+首先，可以将数据存储在本地日志文件中，然后由一个追踪的守护进程将日志push给追踪的服务器。也可以是守护进程暴露这些日志给追踪服务器，由追踪服务器自己来pull。
 
 ### 安全与隐私
 
