--- a/source/_posts/谈谈时间序列数据库.md
+++ b/source/_posts/谈谈时间序列数据库.md
@@ -3,8 +3,8 @@ title: 谈谈时间序列数据库
 date: 2019-11-12 12:18:38
 tags: 
 - nosql
-- 数据库
-category: 时序数据库
+- 时序数据库
+category: 数据库
 ---
 
 什么是时序数据库，能干什么，市面上有哪些实现，怎么实现的，能不能自己设计一款产品？
