--- a/source/_posts/对分布式链路追踪技术的理解.md
+++ b/source/_posts/对分布式链路追踪技术的理解.md
@@ -3,7 +3,8 @@ title: 对分布式链路追踪与监控的理解
 date: 2019-07-13 21:40:20
 tags: 
 - 分布式
-category: 分布式
+- trace
+category: 微服务
 ---
 
 现代互联网服务通常是复杂的大规模分布式系统，持续跟踪与监控每个服务显然是必须的。
