更新学习记录

--- a/source/_posts/待学.md
+++ b/source/_posts/待学.md
@@ -18,7 +18,7 @@ category: 生活
 - [ ] 高性能MySQL
 - [ ] 领域驱动设计精粹
 - [ ] 企业IT架构转型之道
-- [ ] 微服务设计
+- [x] 微服务设计
 - [ ] 设计模式解析
 - [ ] effective java （重读）
 - [x] hbase原理与实践
